# h5py_reproducer

./: meson.build  pyproject.toml  readme.md
h5py_reproducer/: __main__.py  h5py_reproducer.pyx
